k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: meetflow
  labels:
    name: meetflow
